--- a/src/stories/Color.stories.mdx
+++ b/src/stories/Color.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs/blocks";
 
 import { color } from "../components/shared/styles";
 
-<Meta title="色板 /Colors" />
+<Meta title="DOC /色板" />
 
 # Colors
 
